// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for SQ 1`] = `
<div
  className="overview-quality-gate-badge-large small failed"
>
  <div
    className="display-flex-center"
  >
    <span>
      overview.on_new_code_long
    </span>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <FormattedMessage
          defaultMessage="overview.quality_gate.conditions_on_new_code"
          id="overview.quality_gate.conditions_on_new_code"
          values={
            {
              "link": <ForwardRef(Link)
                to={
                  {
                    "pathname": "/quality_gates/show/30",
                  }
                }
              >
                overview.quality_gate
              </ForwardRef(Link)>,
            }
          }
        />
      }
    >
      <HelpIcon
        fill="rgba(255,255,255,0.62)"
        size={12}
      />
    </HelpTooltip>
  </div>
  <h3
    className="huge-spacer-top huge"
  >
    metric.level.ERROR
  </h3>
</div>
`;

exports[`should render correctly for SQ 2`] = `
<div
  className="overview-quality-gate-badge-large small success"
>
  <div
    className="display-flex-center"
  >
    <span>
      overview.on_new_code_long
    </span>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <FormattedMessage
          defaultMessage="overview.quality_gate.conditions_on_new_code"
          id="overview.quality_gate.conditions_on_new_code"
          values={
            {
              "link": <ForwardRef(Link)
                to={
                  {
                    "pathname": "/quality_gates/show/30",
                  }
                }
              >
                overview.quality_gate
              </ForwardRef(Link)>,
            }
          }
        />
      }
    >
      <HelpIcon
        fill="rgba(255,255,255,0.62)"
        size={12}
      />
    </HelpTooltip>
  </div>
  <h3
    className="huge-spacer-top huge"
  >
    metric.level.OK
  </h3>
</div>
`;
